// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Larivaar /> renders children when disabled 1`] = `
<div>
  <span
    class=" "
    currentitem="false"
    data-background-color="#000000"
    data-event="click"
    data-for="mahankoshTooltip"
    data-place="top"
    data-tip="..."
  >
     Vahi 
  </span>
  <span
    class=" "
    currentitem="false"
    data-background-color="#000000"
    data-event="click"
    data-for="mahankoshTooltip"
    data-place="top"
    data-tip="..."
  >
     Guru 
  </span>
  <div
    class="__react_component_tooltip tacc14123-4650-4c52-86a5-f592d855fe1e place-top type-dark"
    data-id="tooltip"
    id="mahankoshTooltip"
  >
    <style>
      
  	.tacc14123-4650-4c52-86a5-f592d855fe1e {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.tacc14123-4650-4c52-86a5-f592d855fe1e.place-top {
        margin-top: -10px;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-top::before {
        border-top: 8px solid transparent;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-bottom {
        margin-top: 10px;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-left {
        margin-left: -10px;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-left::before {
        border-left: 8px solid transparent;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-right {
        margin-left: 10px;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-right::before {
        border-right: 8px solid transparent;
    }
    .tacc14123-4650-4c52-86a5-f592d855fe1e.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
    </style>
    
  </div>
</div>
`;

exports[`<Larivaar /> renders concatenated children when enabled 1`] = `
<div>
  <span
    class=""
  >
    <span
      class=""
      currentitem="false"
      data-background-color="#000000"
      data-event="click"
      data-for="mahankoshTooltip"
      data-place="top"
      data-tip="..."
    >
      <span>
        V
        <wbr />
      </span>
    </span>
    <span
      class=""
      currentitem="false"
      data-background-color="#000000"
      data-event="click"
      data-for="mahankoshTooltip"
      data-place="top"
      data-tip="..."
    >
      <span>
        a
        <wbr />
      </span>
    </span>
    <span
      class=""
      currentitem="false"
      data-background-color="#000000"
      data-event="click"
      data-for="mahankoshTooltip"
      data-place="top"
      data-tip="..."
    >
      <span>
        h
        <wbr />
      </span>
    </span>
  </span>
  <span
    class=""
  >
    <span
      class="larivaar-word"
      currentitem="false"
      data-background-color="#000000"
      data-event="click"
      data-for="mahankoshTooltip"
      data-place="top"
      data-tip="..."
    >
      <span>
        Gu
        <wbr />
      </span>
    </span>
    <span
      class="larivaar-word"
      currentitem="false"
      data-background-color="#000000"
      data-event="click"
      data-for="mahankoshTooltip"
      data-place="top"
      data-tip="..."
    >
      <span>
        ru
        <wbr />
      </span>
    </span>
  </span>
  <div
    class="__react_component_tooltip t4e9ef7aa-8a42-449b-9fa1-c9535192a9df place-top type-dark"
    data-id="tooltip"
    id="mahankoshTooltip"
  >
    <style>
      
  	.t4e9ef7aa-8a42-449b-9fa1-c9535192a9df {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-top {
        margin-top: -10px;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-top::before {
        border-top: 8px solid transparent;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-bottom {
        margin-top: 10px;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-left {
        margin-left: -10px;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-left::before {
        border-left: 8px solid transparent;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-right {
        margin-left: 10px;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-right::before {
        border-right: 8px solid transparent;
    }
    .t4e9ef7aa-8a42-449b-9fa1-c9535192a9df.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
    </style>
    
  </div>
</div>
`;

exports[`<Larivaar /> renders odd words as orange when larivaarAssist is enabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class=""
      >
        <span
          class=""
          currentitem="false"
          data-background-color="#000000"
          data-event="click"
          data-for="mahankoshTooltip"
          data-place="top"
          data-tip="..."
        >
          <span>
            V
            <wbr />
          </span>
        </span>
        <span
          class=""
          currentitem="false"
          data-background-color="#000000"
          data-event="click"
          data-for="mahankoshTooltip"
          data-place="top"
          data-tip="..."
        >
          <span>
            a
            <wbr />
          </span>
        </span>
        <span
          class=""
          currentitem="false"
          data-background-color="#000000"
          data-event="click"
          data-for="mahankoshTooltip"
          data-place="top"
          data-tip="..."
        >
          <span>
            h
            <wbr />
          </span>
        </span>
      </span>
      <span
        class=""
      >
        <span
          class="larivaar-word larivaar-assist-word"
          currentitem="false"
          data-background-color="#000000"
          data-event="click"
          data-for="mahankoshTooltip"
          data-place="top"
          data-tip="..."
        >
          <span>
            Gu
            <wbr />
          </span>
        </span>
        <span
          class="larivaar-word larivaar-assist-word"
          currentitem="false"
          data-background-color="#000000"
          data-event="click"
          data-for="mahankoshTooltip"
          data-place="top"
          data-tip="..."
        >
          <span>
            ru
            <wbr />
          </span>
        </span>
      </span>
      <div
        class="__react_component_tooltip t504bef87-9891-42ce-8701-a938aad5c3b9 place-top type-dark"
        data-id="tooltip"
        id="mahankoshTooltip"
      >
        <style>
          
  	.t504bef87-9891-42ce-8701-a938aad5c3b9 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t504bef87-9891-42ce-8701-a938aad5c3b9.place-top {
        margin-top: -10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-top::before {
        border-top: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-bottom {
        margin-top: 10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-left {
        margin-left: -10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-left::before {
        border-left: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-right {
        margin-left: 10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-right::before {
        border-right: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
        </style>
        
      </div>
    </div>
  </body>,
  "container": <div>
    <span
      class=""
    >
      <span
        class=""
        currentitem="false"
        data-background-color="#000000"
        data-event="click"
        data-for="mahankoshTooltip"
        data-place="top"
        data-tip="..."
      >
        <span>
          V
          <wbr />
        </span>
      </span>
      <span
        class=""
        currentitem="false"
        data-background-color="#000000"
        data-event="click"
        data-for="mahankoshTooltip"
        data-place="top"
        data-tip="..."
      >
        <span>
          a
          <wbr />
        </span>
      </span>
      <span
        class=""
        currentitem="false"
        data-background-color="#000000"
        data-event="click"
        data-for="mahankoshTooltip"
        data-place="top"
        data-tip="..."
      >
        <span>
          h
          <wbr />
        </span>
      </span>
    </span>
    <span
      class=""
    >
      <span
        class="larivaar-word larivaar-assist-word"
        currentitem="false"
        data-background-color="#000000"
        data-event="click"
        data-for="mahankoshTooltip"
        data-place="top"
        data-tip="..."
      >
        <span>
          Gu
          <wbr />
        </span>
      </span>
      <span
        class="larivaar-word larivaar-assist-word"
        currentitem="false"
        data-background-color="#000000"
        data-event="click"
        data-for="mahankoshTooltip"
        data-place="top"
        data-tip="..."
      >
        <span>
          ru
          <wbr />
        </span>
      </span>
    </span>
    <div
      class="__react_component_tooltip t504bef87-9891-42ce-8701-a938aad5c3b9 place-top type-dark"
      data-id="tooltip"
      id="mahankoshTooltip"
    >
      <style>
        
  	.t504bef87-9891-42ce-8701-a938aad5c3b9 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t504bef87-9891-42ce-8701-a938aad5c3b9.place-top {
        margin-top: -10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-top::before {
        border-top: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-bottom {
        margin-top: 10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-left {
        margin-left: -10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-left::before {
        border-left: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-right {
        margin-left: 10px;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-right::before {
        border-right: 8px solid transparent;
    }
    .t504bef87-9891-42ce-8701-a938aad5c3b9.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
      </style>
      
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
